--- a/index.html
+++ b/index.html
@@ -1,165 +1,177 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Коммерческое предложение — ГИАТЕРРА</title>
-  <!-- Favicon and logo -->
-  <link rel="icon" type="image/png" href="logo.png" />
-  <!-- Global stylesheet -->
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>ГИАТЕРРА — ИИ-сервис для юристов</title>
+  <meta name="description" content="Первый ИИ-сервис для юристов в России: безопасность 152-ФЗ, российский сервер, ежедневные обновления, работа с файлами и аудио. 14 дней бесплатно.">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="ГИАТЕРРА — ИИ-сервис для юристов">
+  <meta property="og:description" content="Автоматизируйте до 80% рутины и ускоряйте работу с документами в 3 раза. 14 дней бесплатно.">
+  <meta property="og:image" content="logo.png">
+  <link rel="icon" href="logo.png">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Header with logo and navigation -->
-  <header>
-    <div class="container nav-container">
-      <img src="logo.png" alt="ГИАТЕРРА" class="logo" />
-      <nav class="nav-menu">
-        <a href="#about">О сервисе</a>
-        <a href="#pricing">Тарифы</a>
-        <a href="#special">Спецпредложение</a>
-        <a href="#contact">Контакты</a>
-      </nav>
+<header class="header">
+  <div class="container row between center">
+    <div class="row center g12">
+      <img src="logo.png" alt="ГИАТЕРРА" class="logo">
+      <div class="brand">
+        <strong>ГИАТЕРРА</strong>
+        <span>Порядок создаёт возможности</span>
+      </div>
     </div>
-  </header>
+    <nav class="nav">
+      <a href="#about">О сервисе</a>
+      <a href="#compare">Сравнение</a>
+      <a href="#pricing">Тарифы</a>
+      <a href="#offer">Спецпредложение</a>
+      <a href="#contacts">Контакты</a>
+    </nav>
+  </div>
+</header>
 
-  <!-- Hero section introducing the service -->
-  <section id="hero" class="hero">
-    <div class="container hero-content">
-      <h1>Сервис‑помощник для юристов</h1>
-      <p>
-        Увеличьте эффективность вашей юридической практики на 40 %. Наши
-        инструменты позволяют автоматизировать до 80 % рутинных операций и
-        сократить время работы с документами в три раза.
-      </p>
-      <a href="#special" class="btn btn-primary">Попробовать бесплатно</a>
+<main>
+  <!-- HERO -->
+  <section class="hero">
+    <div class="container">
+      <h1 class="reveal">ПЕРВЫЙ ИИ-СЕРВИС ДЛЯ ЮРИСТОВ В РОССИИ</h1>
+      <p class="lead reveal delay1">Безопасно • Актуально • Без VPN</p>
+      <div class="cta row g12 reveal delay2">
+        <a class="btn btn-primary" href="#offer">Попробовать бесплатно</a>
+        <a class="btn btn-ghost" href="#pricing">Посмотреть тарифы</a>
+      </div>
+      <ul class="ticks reveal delay3">
+        <li>Российский сервер</li>
+        <li>Конфиденциальность персональных данных</li>
+        <li>Ежедневные обновления законодательства*</li>
+        <li>Работа с файлами и аудио*</li>
+      </ul>
+      <p class="note reveal delay3">* Функции доступны на соответствующих тарифах</p>
     </div>
   </section>
 
-  <!-- About section highlighting key benefits -->
-  <section id="about" class="about reveal">
-    <div class="container">
-      <h2>Почему ГИАТЕРРА?</h2>
-      <div class="features">
-        <div class="feature">
-          <h3>До 80 % автоматизации</h3>
-          <p>
-            Наш сервис автоматизирует большую часть рутинных операций,
-            освобождая время для стратегической и творческой работы.
-          </p>
-        </div>
-        <div class="feature">
-          <h3>Интеллектуальные подсказки</h3>
-          <p>
-            Встроенные подсказки и рекомендации помогают повышать
-            квалификацию сотрудников и предотвращают ошибки.
-          </p>
-        </div>
-        <div class="feature">
-          <h3>В три раза быстрее</h3>
-          <p>
-            Работайте с документами втрое быстрее благодаря
-            интеллектуальной обработке и шаблонам.
-          </p>
-        </div>
+  <!-- О СЕРВИСЕ / 152-ФЗ -->
+  <section id="about" class="section">
+    <div class="container grid2">
+      <div class="card reveal">
+        <h2>Наш сервис полностью соответствует 152-ФЗ</h2>
+        <ol class="list-num">
+          <li><strong>Безопасность и конфиденциальность.</strong> Встроенный анонимайзер: персональные данные удаляются до отправки на сервер. Работа напрямую в РФ, без VPN.</li>
+          <li><strong>Актуальность и точность.</strong> Российский сервер; ежедневные обновления; учёт свежей практики. Зарубежные ИИ часто используют устаревшие базы.</li>
+          <li><strong>Функциональность для работы с клиентами.</strong> Неограниченное число чатов для разных дел, совместная работа с помощниками.</li>
+          <li><strong>Инструменты юриста.</strong> Запись/расшифровка аудио; прикрепление и анализ документов (иски, договоры, судебные акты); быстрый поиск по истории.</li>
+        </ol>
+      </div>
+      <div class="card warn reveal delay1">
+        <h3>Важно знать каждому</h3>
+        <p>Использование зарубежных ИИ (ChatGPT, DeepSeek и др.) = <strong>риск нарушения 152-ФЗ и адвокатской тайны</strong>.</p>
+        <ul class="bullets">
+          <li>Данные проходят через иностранные сервера.</li>
+          <li>Нет анонимайзера — документы сохраняются и анализируются.</li>
+          <li>Утечка ПД клиента — штраф до 500 000 ₽ и дисциплинарная ответственность вплоть до лишения статуса адвоката.</li>
+        </ul>
       </div>
     </div>
   </section>
 
-  <!-- Pricing section with tariff cards -->
-  <section id="pricing" class="pricing reveal">
+  <!-- СРАВНЕНИЕ -->
+  <section id="compare" class="section">
     <div class="container">
-      <h2>Тарифные планы</h2>
-      <div class="pricing-cards">
-        <div class="card">
+      <h2 class="reveal">Сравнение с другими</h2>
+      <div class="table-wrap reveal delay1">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Функция</th>
+              <th>Наш сервис</th>
+              <th>ChatGPT</th>
+              <th>DeepSeek</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr><td>Российский сервер</td><td>✔</td><td>✖</td><td>✖</td></tr>
+            <tr><td>Ежедневные обновления</td><td>✔</td><td>✖</td><td>✖</td></tr>
+            <tr><td>Специализация под юристов</td><td>✔</td><td>◯</td><td>◯</td></tr>
+            <tr><td>Анонимайзер персональных данных</td><td>✔</td><td>✖</td><td>✖</td></tr>
+            <tr><td>Работа с файлами и аудио</td><td>✔</td><td>◯</td><td>◯</td></tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </section>
+
+  <!-- ТАРИФЫ -->
+  <section id="pricing" class="section">
+    <div class="container">
+      <h2 class="reveal">Тарифные планы</h2>
+      <div class="grid3">
+        <article class="card reveal delay1">
           <h3>Полный пакет «Профи»</h3>
-          <p class="price">
-            Регистрация: 59 000 ₽<br />Годовая подписка (от 20 профилей):
-            620 000 ₽
-          </p>
-          <p class="description">
-            Оптимальный вариант для крупных юридических компаний, которые
-            стремятся цифровизовать процессы и получать непрерывную
-            поддержку.
-          </p>
-        </div>
-        <div class="card">
+          <p><strong>Регистрация:</strong> <span class="price">59 000 ₽</span> <!-- ИЗМЕНИ ЦЕНУ --></p>
+          <p><strong>Годовая подписка (от 20 профилей):</strong> <span class="price">620 000 ₽</span> <!-- ИЗМЕНИ ЦЕНУ --></p>
+          <p class="muted">Оптимально для крупных юрфирм с постоянной поддержкой.</p>
+        </article>
+        <article class="card reveal delay2">
           <h3>Гибкий тариф «Бизнес»</h3>
-          <p class="price">
-            Регистрация: 180 000 ₽<br />Ежемесячная оплата: 3 000 ₽ за
-            активного пользователя
-          </p>
-          <p class="description">
-            Для компаний, которым требуется гибкость и масштабируемость в
-            подключении новых сотрудников.
-          </p>
-        </div>
-        <div class="card">
+          <p><strong>Регистрация:</strong> <span class="price">180 000 ₽</span> <!-- ИЗМЕНИ ЦЕНУ --></p>
+          <p><strong>Ежемесячно:</strong> <span class="price">3 000 ₽</span> за активного пользователя <!-- ИЗМЕНИ ЦЕНУ --></p>
+          <p class="muted">Для компаний, где важна гибкость и масштабируемость.</p>
+        </article>
+        <article class="card reveal delay3">
           <h3>Базовый вариант «Стандарт»</h3>
-          <p class="price">
-            Регистрация: 59 000 ₽<br />Ежегодное продление: 56 000 ₽ за
-            профиль
-          </p>
-          <p class="description">
-            Для индивидуальных юристов и небольших фирм — стартовый
-            тариф для начала цифровой трансформации без лишних затрат.
-          </p>
-        </div>
+          <p><strong>Регистрация:</strong> <span class="price">59 000 ₽</span> <!-- ИЗМЕНИ ЦЕНУ --></p>
+          <p><strong>Ежегодное продление:</strong> <span class="price">56 000 ₽</span> за 1 профиль <!-- ИЗМЕНИ ЦЕНУ --></p>
+          <p class="muted">Для индивидуальных юристов и небольших фирм.</p>
+        </article>
       </div>
     </div>
   </section>
 
-  <!-- Special offer section with CTA -->
-  <section id="special" class="special reveal">
+  <!-- СПЕЦПРЕДЛОЖЕНИЕ -->
+  <section id="offer" class="section accent">
     <div class="container">
-      <h2>Специальное предложение</h2>
-      <p>
-        Заключите договор до 30 сентября 2025 года и получите 14 дней
-        бесплатного тестового доступа и персональный onboarding для вашей
-        команды.
-      </p>
-      <a href="#contact" class="btn btn-primary">Оставить заявку</a>
+      <h2 class="reveal">Специальное предложение</h2>
+      <p class="lead reveal delay1">14-дневный бесплатный тест + персональный onboarding при заключении договора до <strong>30 сентября</strong>.</p>
+      <div class="cta row g12 reveal delay2">
+        <a class="btn btn-primary" href="mailto:giaterra.rf@gmail.com?subject=Заявка%20на%20тест&body=Имя%3A%0AКомпания%3A%0AТелефон%3A">Оставить заявку по email</a>
+        <a class="btn btn-ghost" href="tel:+79273333329">Позвонить +7 (927) 333-33-29</a>
+      </div>
     </div>
   </section>
 
-  <!-- Contact section with form and contact info -->
-  <section id="contact" class="contact reveal">
-    <div class="container">
-      <h2>Свяжитесь с нами</h2>
-      <p>
-        Наша команда готова обсудить детали сотрудничества и подобрать
-        оптимальный тариф.
-      </p>
-      <div class="contact-info">
-        <p><strong>Телефон:</strong> <a href="tel:+792733333329">+7 (927) 333‑33‑29</a></p>
+  <!-- КОНТАКТЫ -->
+  <section id="contacts" class="section">
+    <div class="container grid2">
+      <div class="card reveal">
+        <h2>Свяжитесь с нами</h2>
+        <p><strong>Телефон:</strong> <a href="tel:+79273333329">+7 (927) 333-33-29</a></p>
         <p><strong>Email:</strong> <a href="mailto:giaterra.rf@gmail.com">giaterra.rf@gmail.com</a></p>
+        <p class="muted">С уважением, <br>Гончаров Игорь — коммерческий директор ООО «ГИАТЕРРА»</p>
       </div>
-      <form class="contact-form" id="contactForm" onsubmit="return submitForm(event)">
-        <input type="text" name="name" placeholder="Ваше имя" required />
-        <input type="email" name="email" placeholder="Ваш email" required />
-        <textarea name="message" placeholder="Ваше сообщение" rows="4" required></textarea>
-        <button type="submit" class="btn btn-secondary">Отправить</button>
+      <form class="card reveal delay1" action="mailto:giaterra.rf@gmail.com" method="post" enctype="text/plain">
+        <h3>Быстрая заявка (через почту)</h3>
+        <input class="input" name="Имя" placeholder="Ваше имя" required>
+        <input class="input" name="Email" type="email" placeholder="Ваш email" required>
+        <textarea class="input" name="Сообщение" rows="4" placeholder="Коротко опишите задачу"></textarea>
+        <button class="btn btn-primary" type="submit">Отправить</button>
+        <p class="muted">Для полноценной формы можем подключить Formspree/Яндекс.Формы — скажи, подключу.</p>
       </form>
-      <p class="director-signature">
-        С уважением,<br />
-        Гончаров Игорь<br />
-        Коммерческий директор ООО «ГИАТЕРРА»
-      </p>
     </div>
   </section>
+</main>
 
-  <!-- Footer with logo and statistics -->
-  <footer>
-    <div class="container footer-container">
-      <img src="logo.png" alt="ГИАТЕРРА" class="logo-footer" />
-      <p>
-        По статистике, наши клиенты окупают подписку уже через 2–3 месяца
-        работы с сервисом.
-      </p>
+<footer class="footer">
+  <div class="container row between center">
+    <div class="row center g12">
+      <img src="logo.png" class="logo-sm" alt="">
+      <span>© ООО «ГИАТЕРРА»</span>
     </div>
-  </footer>
+    <p class="muted">P.S. По статистике, клиенты окупают подписку за 2–3 месяца работы.</p>
+  </div>
+</footer>
 
-  <!-- Scripts -->
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
