--- a/index.html
+++ b/index.html
@@ -102,28 +102,37 @@
     </div>
   </section>
 
-  <!-- ТАРИФЫ -->
+  <!-- ТАРИФЫ (ОБНОВЛЕНО) -->
   <section id="pricing" class="section">
     <div class="container">
       <h2 class="reveal">Тарифные планы</h2>
       <div class="grid3">
+        <!-- Профи -->
         <article class="card reveal delay1">
-          <h3>Полный пакет «Профи»</h3>
-          <p><strong>Регистрация:</strong> <span class="price">59 000 ₽</span> <!-- ИЗМЕНИ ЦЕНУ --></p>
-          <p><strong>Годовая подписка (от 20 профилей):</strong> <span class="price">620 000 ₽</span> <!-- ИЗМЕНИ ЦЕНУ --></p>
-          <p class="muted">Оптимально для крупных юрфирм с постоянной поддержкой.</p>
+          <h3>Тариф «Профи»</h3>
+          <p><strong>Регистрация:</strong> <span class="price">59&nbsp;000 ₽</span></p>
+          <p><strong>Ежемесячная оплата:</strong> <span class="price">4&nbsp;900 ₽</span></p>
+          <ul class="bullets muted" style="margin-top:10px">
+            <li>Ежегодное обслуживание считается от 10&nbsp;профилей</li>
+            <li>Производится индивидуальный расчёт</li>
+          </ul>
         </article>
+
+        <!-- Гибкий -->
         <article class="card reveal delay2">
-          <h3>Гибкий тариф «Бизнес»</h3>
-          <p><strong>Регистрация:</strong> <span class="price">180 000 ₽</span> <!-- ИЗМЕНИ ЦЕНУ --></p>
-          <p><strong>Ежемесячно:</strong> <span class="price">3 000 ₽</span> за активного пользователя <!-- ИЗМЕНИ ЦЕНУ --></p>
-          <p class="muted">Для компаний, где важна гибкость и масштабируемость.</p>
+          <h3>Тариф «Гибкий»</h3>
+          <p><strong>Регистрация:</strong> <span class="price">88&nbsp;000 ₽</span></p>
+          <p><strong>Подписка:</strong> <span class="price">56&nbsp;000 ₽</span> в год <span class="muted">или</span> <span class="price">5&nbsp;100 ₽</span> в месяц</p>
+          <ul class="bullets muted" style="margin-top:10px">
+            <li>Программа «Приведи друга»: сумма регистрации делится на 5&nbsp;человек</li>
+          </ul>
         </article>
+
+        <!-- Стандарт -->
         <article class="card reveal delay3">
-          <h3>Базовый вариант «Стандарт»</h3>
-          <p><strong>Регистрация:</strong> <span class="price">59 000 ₽</span> <!-- ИЗМЕНИ ЦЕНУ --></p>
-          <p><strong>Ежегодное продление:</strong> <span class="price">56 000 ₽</span> за 1 профиль <!-- ИЗМЕНИ ЦЕНУ --></p>
-          <p class="muted">Для индивидуальных юристов и небольших фирм.</p>
+          <h3>Тариф «Стандарт»</h3>
+          <p><strong>Регистрация:</strong> <span class="price">88&nbsp;000 ₽</span></p>
+          <p><strong>Подписка:</strong> <span class="price">56&nbsp;000 ₽</span> в год <span class="muted">или</span> <span class="price">5&nbsp;100 ₽</span> в месяц</p>
         </article>
       </div>
     </div>
@@ -136,19 +145,19 @@
       <p class="lead reveal delay1">14-дневный бесплатный тест + персональный onboarding при заключении договора до <strong>30 сентября</strong>.</p>
       <div class="cta row g12 reveal delay2">
         <a class="btn btn-primary" href="mailto:giaterra.rf@gmail.com?subject=Заявка%20на%20тест&body=Имя%3A%0AКомпания%3A%0AТелефон%3A">Оставить заявку по email</a>
-        <a class="btn btn-ghost" href="tel:+79273333329">Позвонить +7 (927) 333-33-29</a>
+        <a class="btn btn-ghost" href="tel:+79273333329">Позвонить +7&nbsp;(927)&nbsp;333-33-29</a>
       </div>
     </div>
   </section>
 
-  <!-- КОНТАКТЫ -->
+  <!-- КОНТАКТЫ (ПОДПИСЬ ИЗМЕНЕНА) -->
   <section id="contacts" class="section">
     <div class="container grid2">
       <div class="card reveal">
         <h2>Свяжитесь с нами</h2>
-        <p><strong>Телефон:</strong> <a href="tel:+79273333329">+7 (927) 333-33-29</a></p>
+        <p><strong>Телефон:</strong> <a href="tel:+79273333329">+7&nbsp;(927)&nbsp;333-33-29</a></p>
         <p><strong>Email:</strong> <a href="mailto:giaterra.rf@gmail.com">giaterra.rf@gmail.com</a></p>
-        <p class="muted">С уважением, <br>Гончаров Игорь — коммерческий директор ООО «ГИАТЕРРА»</p>
+        <p class="muted">С уважением, команда «ГИАТЕРРА»</p>
       </div>
       <form class="card reveal delay1" action="mailto:giaterra.rf@gmail.com" method="post" enctype="text/plain">
         <h3>Быстрая заявка (через почту)</h3>
